syntax = "proto3";

package pdfservice;

option go_package = "github.com/qiansuo1/ragserver/grpcclient";

service PdfService {
  rpc ExtractText (PdfRequest) returns (stream PdfResponse) {}
  rpc VectorizeText (VectorizeRequest) returns (VectorizeResponse) {}
}

message PdfRequest {
  string file_path = 1;
}

message PdfResponse {
  int32 page_number = 1;
  string sentence_chunk = 2;
  int32 chunk_char_count = 3;
  int32 chunk_word_count = 4;
  int32 chunk_token_count = 5;
  repeated float embedding = 6;
}


message VectorizeRequest {
    string text = 1;
}

message VectorizeResponse {
    repeated float vector = 1;
}
